# MyGymBro

./: .gitignore  LICENSE  Procfile  README.md  app.py  extensions.py  logging_config.py  mygymbro.sql  pyproject.toml  register_blueprints.py  requirements.txt  wsgi.py
.github/workflows/: main.yml
config/: settings.py
docker/: .env.dev  .env.prod  Dockerfile  docker-compose.yml  requirements.txt
docs/: Hito1.md  Hito2.md  Hito3.md  Hito4.md  Hito5.md  swagger.yaml
models/: enums.py  exercise_model.py  progress_model.py  routine_exercise.py  routine_model.py  training_plan_model.py  user_model.py
routes/: exercise_routes.py  progress_route.py  routine_routes.py  training_plan_routes.py  user_routes.py
services/: exercise_service.py  progress_service.py  routine_service.py  training_plan_service.py  user_service.py
tests/: conftest.py  test_exercise.py  test_progress.py  test_routine.py  test_training_plan.py  test_user.py
