[tool.poetry]
name = "mygymbro"
version = "0.1.0"
description = "A fitness app designed to help users achieve their training goals through personalized workout plans, progress tracking, and guidance."
authors = ["RaulRF02 <raulrf2601@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "2.3.3"
flask-restful = "0.3.9"
flask-swagger = "0.2.13"
flask-jwt-extended = "4.4.4"
python-dotenv = "1.0.0"
flask-sqlalchemy = "2.5.1"
flasgger = "0.9.7.1"
sqlalchemy = "1.3.24"
pytest = "8.3.3"
pytest-cov = "6.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
exclude = ".venv,venv,__pycache__,.git,.idea,.env,.coverage,mygymbro.db,poetry.lock,get-pip.py"
ignore = "E203,W503"
